--- a/program.html
+++ b/program.html
@@ -52,11 +52,7 @@
 										</ul>
 										-->
 										<h2>Program Schedule:</h2>
-										TBD
-
-	
-
-	
+										<a href="Workshops-template-W35.pdf"> Workshop Schedule</a>
 
 									</div>
 									<!--
